@@ -29,6 +29,7 @@ class ColumnType(StrEnum):
     BIGINT = "bigint"
     BLOB = "blob"
     BOOLEAN = "boolean"
+    COUNTER = "counter"
     DATE = "date"
     DECIMAL = "decimal"
     DOUBLE = "double"
@@ -40,6 +41,7 @@ class ColumnType(StrEnum):
     TEXT = "text"
     TIME = "time"
     TIMESTAMP = "timestamp"
+    TIMEUUID = "timeuuid"
     TINYINT = "tinyint"
     UUID = "uuid"
     VARINT = "varint"
